# dnguyen-blog

./: Readme.md
client/: package.json
server/: Cargo.toml  docker-compose.yml
server/Docker/: app.Dockerfile  db.Dockerfile
server/migrations/: initialize.sql
server/src/: lib.rs  main.rs
server/src/dnguyen/: mod.rs
server/src/lib/: lib.rs
server/src/lib/http/: dto.rs
server/src/lib/model/: posts.rs  users.rs
server/src/routes/: api.rs  blog.rs  mod.rs
server/static/: main.css
server/templates/: about.html.hbs  blog_index.html.hbs  footer.html.hbs  index.html.hbs  layout.html.hbs  nav.html.hbs  support.html.hbs
server/templates/blog/: blog_index.html.hbs
server/templates/error/: 404.html.hbs
server/tests/: common.rs  posts.rs  users.rs
