[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tokio-postgres = { version="0.7.2", features=["with-chrono-0_4", "with-serde_json-1"] }
tokio = "1.8.0"
chrono = "0.4.19"
serde_json = "1.0.64"
