[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.1", features=["json"] }
tokio-postgres = { version="0.7.2", features=["with-chrono-0_4", "with-serde_json-1"] }
tokio = "1.8.0"
chrono = { version="0.4.19", features=["serde"] }
serde = "1.0.126"
serde_json = "1.0.64"
